# caddy-tui

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pages.yaml  publish.yml
caddy_tui/: __init__.py  block_editor.py  caddy_integration.py  caddyfile_parser.py  cli.py  config.py  db.py  drift.py  exporter.py  helper_runner.py  importer.py  json_normalizer.py  live_api.py  live_renderer.py  models.py  privileged_helper.py  snapshots.py  status.py  tui_app.py  versioning.py
caddy_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: caddyfile-logical-schema.md  privileged-helper.md
pages/: META.md  build.py  index.html  style.css
tests/: test_config.py  test_db.py  test_drift.py  test_exporter.py  test_helper_runner.py  test_importer.py  test_live_api.py  test_snapshots.py  test_status.py  test_versioning.py
