[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caddy-tui"
version = "0.2.0"
description = "TUI + CLI tool to manage Caddy configs via SQLite"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alexander Hilton", email = "alexander@skystamper.com" }
]
license = { file = "LICENSE" }
keywords = ["caddy", "tui", "cli", "sqlite", "devops", "configuration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "SQLAlchemy>=2.0",
    "rich>=13.7",
    "packaging>=23.2",
    "colorama>=0.4",
]

[project.urls]
Homepage = "https://github.com/ajphilton/caddy-tui"
Repository = "https://github.com/ajphilton/caddy-tui"
Issues = "https://github.com/ajphilton/caddy-tui/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock"
]

[project.scripts]
"caddy-tui" = "caddy_tui.cli:main"
"caddy-tui-helper" = "caddy_tui.privileged_helper:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["caddy_tui*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"
